DS-3484: Refactoring builders and extended Browse by title test