@@ -92,9 +92,9 @@ public class GoogleBitstreamComparatorTest extends AbstractUnitTest{
         when(bitstreamFormat1.getMIMEType()).thenReturn("application/pdf");
         when(bitstreamFormat2.getMIMEType()).thenReturn("application/pdf");
         when(bitstreamFormat3.getMIMEType()).thenReturn("application/pdf");
-        when(bitstream1.getSize()).thenReturn(new Long(100));
-        when(bitstream2.getSize()).thenReturn(new Long(200));
-        when(bitstream3.getSize()).thenReturn(new Long(300));
+        when(bitstream1.getSize()).thenReturn(Long.valueOf(100));
+        when(bitstream2.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream3.getSize()).thenReturn(Long.valueOf(300));
 
         List<Bitstream> toSort = bundle.getBitstreams();
         Collections.sort(toSort, new GoogleBitstreamComparator(context, settings));
@@ -130,9 +130,9 @@ public class GoogleBitstreamComparatorTest extends AbstractUnitTest{
         when(bitstreamFormat1.getMIMEType()).thenReturn("text/richtext");
         when(bitstreamFormat2.getMIMEType()).thenReturn("text/richtext");
         when(bitstreamFormat3.getMIMEType()).thenReturn("application/postscript");
-        when(bitstream1.getSize()).thenReturn(new Long(100));
-        when(bitstream2.getSize()).thenReturn(new Long(200));
-        when(bitstream3.getSize()).thenReturn(new Long(300));
+        when(bitstream1.getSize()).thenReturn(Long.valueOf(100));
+        when(bitstream2.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream3.getSize()).thenReturn(Long.valueOf(300));
 
         List<Bitstream> toSort = bundle.getBitstreams();
         Collections.sort(toSort, new GoogleBitstreamComparator(context, settings));
@@ -150,9 +150,9 @@ public class GoogleBitstreamComparatorTest extends AbstractUnitTest{
         when(bitstreamFormat1.getMIMEType()).thenReturn("application/pdf");
         when(bitstreamFormat2.getMIMEType()).thenReturn("application/pdf");
         when(bitstreamFormat3.getMIMEType()).thenReturn("application/pdf");
-        when(bitstream1.getSize()).thenReturn(new Long(200));
-        when(bitstream2.getSize()).thenReturn(new Long(200));
-        when(bitstream3.getSize()).thenReturn(new Long(200));
+        when(bitstream1.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream2.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream3.getSize()).thenReturn(Long.valueOf(200));
 
         List<Bitstream> toSort = bundle.getBitstreams();
         Collections.sort(toSort, new GoogleBitstreamComparator(context, settings));
@@ -170,9 +170,9 @@ public class GoogleBitstreamComparatorTest extends AbstractUnitTest{
         when(bitstreamFormat1.getMIMEType()).thenReturn("unknown");
         when(bitstreamFormat2.getMIMEType()).thenReturn("text/richtext");
         when(bitstreamFormat3.getMIMEType()).thenReturn("text/richtext");
-        when(bitstream1.getSize()).thenReturn(new Long(400));
-        when(bitstream2.getSize()).thenReturn(new Long(200));
-        when(bitstream3.getSize()).thenReturn(new Long(300));
+        when(bitstream1.getSize()).thenReturn(Long.valueOf(400));
+        when(bitstream2.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream3.getSize()).thenReturn(Long.valueOf(300));
 
         List<Bitstream> toSort = bundle.getBitstreams();
         Collections.sort(toSort, new GoogleBitstreamComparator(context, settings));
@@ -190,9 +190,9 @@ public class GoogleBitstreamComparatorTest extends AbstractUnitTest{
         when(bitstreamFormat1.getMIMEType()).thenReturn("unknown");
         when(bitstreamFormat2.getMIMEType()).thenReturn("unknown");
         when(bitstreamFormat3.getMIMEType()).thenReturn("unknown");
-        when(bitstream1.getSize()).thenReturn(new Long(200));
-        when(bitstream2.getSize()).thenReturn(new Long(300));
-        when(bitstream3.getSize()).thenReturn(new Long(100));
+        when(bitstream1.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream2.getSize()).thenReturn(Long.valueOf(300));
+        when(bitstream3.getSize()).thenReturn(Long.valueOf(100));
 
         List<Bitstream> toSort = bundle.getBitstreams();
         Collections.sort(toSort, new GoogleBitstreamComparator(context, settings));
@@ -223,9 +223,9 @@ public class GoogleBitstreamComparatorTest extends AbstractUnitTest{
      */
     @Test
     public void testNoMimeType() throws Exception{
-        when(bitstream1.getSize()).thenReturn(new Long(200));
-        when(bitstream2.getSize()).thenReturn(new Long(300));
-        when(bitstream3.getSize()).thenReturn(new Long(100));
+        when(bitstream1.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream2.getSize()).thenReturn(Long.valueOf(300));
+        when(bitstream3.getSize()).thenReturn(Long.valueOf(100));
 
         List<Bitstream> toSort = bundle.getBitstreams();
         Collections.sort(toSort, new GoogleBitstreamComparator(context, settings));
@@ -272,9 +272,9 @@ public class GoogleBitstreamComparatorTest extends AbstractUnitTest{
         when(bitstreamFormat1.getMIMEType()).thenReturn("text/richtext");
         when(bitstreamFormat2.getMIMEType()).thenReturn("application/msword");
         when(bitstreamFormat3.getMIMEType()).thenReturn("application/postscript");
-        when(bitstream1.getSize()).thenReturn(new Long(100));
-        when(bitstream2.getSize()).thenReturn(new Long(200));
-        when(bitstream3.getSize()).thenReturn(new Long(300));
+        when(bitstream1.getSize()).thenReturn(Long.valueOf(100));
+        when(bitstream2.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream3.getSize()).thenReturn(Long.valueOf(300));
 
         List<Bitstream> toSort = bundle.getBitstreams();
         Collections.sort(toSort, new GoogleBitstreamComparator(context, settings));
@@ -295,9 +295,9 @@ public class GoogleBitstreamComparatorTest extends AbstractUnitTest{
         when(bitstreamFormat1.getMIMEType()).thenReturn("text/richtext");
         when(bitstreamFormat2.getMIMEType()).thenReturn("application/msword");
         when(bitstreamFormat3.getMIMEType()).thenReturn("application/postscript");
-        when(bitstream1.getSize()).thenReturn(new Long(100));
-        when(bitstream2.getSize()).thenReturn(new Long(200));
-        when(bitstream3.getSize()).thenReturn(new Long(300));
+        when(bitstream1.getSize()).thenReturn(Long.valueOf(100));
+        when(bitstream2.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream3.getSize()).thenReturn(Long.valueOf(300));
 
         List<Bitstream> toSort = bundle.getBitstreams();
         Collections.sort(toSort, new GoogleBitstreamComparator(context, settings));
@@ -315,9 +315,9 @@ public class GoogleBitstreamComparatorTest extends AbstractUnitTest{
         when(bitstreamFormat1.getMIMEType()).thenReturn("text/richtext");
         when(bitstreamFormat2.getMIMEType()).thenReturn("application/msword");
         when(bitstreamFormat3.getMIMEType()).thenReturn("application/postscript");
-        when(bitstream1.getSize()).thenReturn(new Long(100));
-        when(bitstream2.getSize()).thenReturn(new Long(200));
-        when(bitstream3.getSize()).thenReturn(new Long(300));
+        when(bitstream1.getSize()).thenReturn(Long.valueOf(100));
+        when(bitstream2.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream3.getSize()).thenReturn(Long.valueOf(300));
 
         List<Bitstream> toSort = bundle.getBitstreams();
         Collections.sort(toSort, new GoogleBitstreamComparator(context, settings));
@@ -335,9 +335,9 @@ public class GoogleBitstreamComparatorTest extends AbstractUnitTest{
         when(bitstreamFormat1.getMIMEType()).thenReturn("text/richtext");
         when(bitstreamFormat2.getMIMEType()).thenReturn("application/msword");
         when(bitstreamFormat3.getMIMEType()).thenReturn("audio/x-wav");
-        when(bitstream1.getSize()).thenReturn(new Long(300));
-        when(bitstream2.getSize()).thenReturn(new Long(200));
-        when(bitstream3.getSize()).thenReturn(new Long(100));
+        when(bitstream1.getSize()).thenReturn(Long.valueOf(300));
+        when(bitstream2.getSize()).thenReturn(Long.valueOf(200));
+        when(bitstream3.getSize()).thenReturn(Long.valueOf(100));
 
         List<Bitstream> toSort = bundle.getBitstreams();
         Collections.sort(toSort, new GoogleBitstreamComparator(context, settings));
